--- a/src/FastFoodItem/fastFoodItem.css
+++ b/src/FastFoodItem/fastFoodItem.css
@@ -1,3 +1,6 @@
+.card{
+  opacity: 0;
+}
 .card__placeholder {
   height: 280px;
   animation: image-loading 1s linear infinite alternate; /* alternate باعث می شود انیمیشن وقتی به ۱۰۰ رسید دوباره از ۱۰۰ به صفر برگردد*/
